[project]
name = "openral-hal"
version = "0.1.0"
description = "OpenRAL Hardware Abstraction Layer — HAL Protocol and ros2_control adapter"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "openral-core", # reason: HAL Protocol uses RobotDescription, Action, JointState
    "openral-sensors", # reason: catalog-backed *_with_sensors() factories materialise SensorSpec/Bundle on canonical RobotDescriptions
    "lerobot>=0.5.0",  # reason: types.py module required; minimum version supporting 3.12+
    "structlog>=24.0", # reason: structured logging per CLAUDE.md §5.1
]

[project.optional-dependencies]
so100 = [
    "lerobot>=0.5.0",  # reason: SO-100 USB driver and motor bus interface; bumped for Python 3.12+ support
]
arm-sim = [
    "mujoco>=3.0",  # reason: MuJoCo physics engine for UR5e / UR10e / Franka Panda HAL sim adapters
    "robot-descriptions>=1.12.0",  # reason: source of mujoco_menagerie MJCFs (UR5e, UR10e, Panda)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_hal"]
