[project]
name = "openral-reasoner"
version = "0.1.0"
description = "OpenRAL S2 reasoner — typed LLM client + Plan → BT XML emission (ADR-0005)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "openral-core",            # reason: RSkillManifest / WorldState / ROSPlanningError subclasses
    "openral-observability",   # reason: future inference_span wraps the LLM call (deferred to first concrete LLMClient PR)
    "pydantic>=2.5",           # reason: Plan / ToolCall structured-output schemas (ADR-0003 + ADR-0005)
    "structlog>=24.1",         # reason: structured logging per CLAUDE.md §5.1
    "anthropic>=0.40",         # reason: AnthropicToolUseClient — provider="anthropic" path
    "openai>=1.40",            # reason: OpenAICompatibleToolUseClient — provider in {openai-compatible, openrouter, ollama}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_reasoner"]
