[project]
name = "openral-rskill"
version = "0.1.0"
description = "OpenRAL Skill base class — lifecycle state machine and mock skill"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "openral-core",            # reason: WorldState / Action / RobotDescription schemas + exceptions
    "openral-observability",   # reason: rskill_span / inference_span on Skill.configure / activate / step / chunk inference
    "openral-world-state",     # reason: ADR-0044 LookAtRskill — compute_gaze_pose / rotation_to_quat_wxyz / homogeneous_from_quat_xyz
    "huggingface_hub>=0.20",       # reason: rSkill.from_pretrained downloads manifests + weights from HF Hub
    "structlog>=24.1",             # reason: structured logging per CLAUDE.md §5.1
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_rskill"]
