[project]
name = "openral-sensors"
version = "0.1.0"
description = "OpenRAL sensor adapters — launch generators and calibration helpers"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "openral-core", # reason: SensorSpec / SensorBundle schemas
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_sensors"]
