[project]
name = "openral-state-adapter"
version = "0.1.0"
description = "OpenRAL layout-adapter registry — assembles per-checkpoint state vectors (ADR-0027)"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "openral-core", # reason: StateLayout / StateContractBindings / WRAPPED_TASK_SPACE_LAYOUTS
    "numpy>=1.26", # reason: assembler outputs np.ndarray
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_state_adapter"]
