[project]
name = "openral-wam"
version = "0.1.0"
description = "OpenRAL World Action Model layer — WorldModel Protocol + Rollout schema (CLAUDE.md §6.3)"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "openral-core",            # reason: WorldState + Action schemas the WorldModel consumes/predicts
    "openral-observability",   # reason: future wam.rollout span wraps each mental-simulation call
    "pydantic>=2.5",           # reason: Rollout schema (ADR-0003)
    "structlog>=24.1",         # reason: structured logging per CLAUDE.md §5.1
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_wam"]
