[project]
name = "openral-world-state"
version = "0.1.0"
description = "OpenRAL World State aggregator — tf2-aware snapshot producer"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "openral-core", # reason: WorldState / JointState / SensorSpec schemas
    "numpy>=1.26",  # reason: ADR-0035 voxel-frustum lift geometry
    "openral-observability", # reason: world_state.snapshot span + components_stale metric
    "structlog>=24.1",  # reason: structured logging per CLAUDE.md §5.1
    "opentelemetry-api>=1.27",  # reason: trace.get_tracer for snapshot span
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openral_world_state"]
